--- a/layouts/404.html
+++ b/layouts/404.html
@@ -7,9 +7,23 @@
     </h1>
     <div class="row">
       <div class="col-lg-4 col-md-4 col-12 py-2">
-        <a href="/" class="btn btn-block btn-yankees px-5 py-3 font-weight-bold">Home</a>
-        <a href="/services/" class="btn btn-block btn-yankees px-5 py-3 font-weight-bold">Services</a>
-        <a href="/global-connect/" class="btn btn-block btn-yankees px-5 py-3 font-weight-bold">Global Connect</a>
+        <a href="/" class="btn btn-block btn-yankees px-5 py-3 font-weight-bold"
+          >Home</a
+        >
+      </div>
+      <div class="col-lg-4 col-md-4 col-12 py-2">
+        <a
+          href="/services/"
+          class="btn btn-block btn-yankees px-5 py-3 font-weight-bold"
+          >Services</a
+        >
+      </div>
+      <div class="col-lg-4 col-md-4 col-12 py-2">
+        <a
+          href="/global-connect/"
+          class="btn btn-block btn-yankees px-5 py-3 font-weight-bold"
+          >Global Connect</a
+        >
       </div>
     </div>
   </div>
