--- a/static/css/sudocore.css
+++ b/static/css/sudocore.css
@@ -1,12 +1,12 @@
 :root {
   --primary-color: #6c00ff;
   --secondary-color: #ff0067;
-  --tertiary-color: ;
+  --tertiary-color: #05ed8c;
   --primary-color-dark: #2000b3;
   --secondary-color-dark: #cc0034;
-  --tertiary-color-dark: #cc0034;
-  --dark: #0b0b0b;
-  --light: #e6e6e6;
+  --tertiary-color-dark: #00ba59;
+  --graphite: #0b0b0b;
+  --light: #f8f9fa;
   --white: #ffffff;
 
   --primary-font: "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif,
@@ -59,7 +59,7 @@ body {
   font-size: 1 rem;
   font-weight: 400;
   line-height: 1.5;
-  color: var(--dark);
+  color: var(--graphite);
   background-color: var(--white);
 }
 
@@ -536,7 +536,7 @@ kbd {
   padding: 0.2rem 0.4rem;
   font-size: 87.5%;
   color: var(--white);
-  background-color: var(--dark);
+  background-color: var(--graphite);
   border-radius: 0.2rem;
 }
 
@@ -2276,13 +2276,13 @@ fieldset:disabled a.btn {
 }
 
 .btn-light {
-  color: var(--dark);
+  color: var(--graphite);
   background-color: var(--white);
   border-color: var(--white);
 }
 
 .btn-light:hover {
-  color: var(--dark);
+  color: var(--graphite);
   background-color: var(--light);
   border-color: var(--light);
 }
@@ -2294,7 +2294,7 @@ fieldset:disabled a.btn {
 
 .btn-light.disabled,
 .btn-light:disabled {
-  color: var(--dark);
+  color: var(--graphite);
   background-color: var(--light);
   border-color: var(--light);
 }
@@ -2302,7 +2302,7 @@ fieldset:disabled a.btn {
 .btn-light:not(:disabled):not(.disabled):active,
 .btn-light:not(:disabled):not(.disabled).active,
 .show > .btn-light.dropdown-toggle {
-  color: var(--dark);
+  color: var(--graphite);
   background-color: var(--light);
   border-color: var(--light);
 }
@@ -2313,41 +2313,41 @@ fieldset:disabled a.btn {
   box-shadow: 0 0 0 0.2rem rgba(248, 249, 250, 0.5);
 }
 
-.btn-dark {
+.btn-graphite {
   color: var(--white);
-  background-color: var(--dark);
-  border-color: var(--dark);
+  background-color: var(--graphite);
+  border-color: var(--graphite);
 }
 
-.btn-dark:hover {
+.btn-graphite:hover {
   color: var(--white);
-  background-color: var(--dark);
-  border-color: var(--dark);
+  background-color: var(--graphite);
+  border-color: var(--graphite);
 }
 
-.btn-dark:focus,
-.btn-dark.focus {
+.btn-graphite:focus,
+.btn-graphite.focus {
   box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
 }
 
-.btn-dark.disabled,
-.btn-dark:disabled {
+.btn-graphite.disabled,
+.btn-graphite:disabled {
   color: var(--white);
-  background-color: var(--dark);
-  border-color: var(--dark);
+  background-color: var(--graphite);
+  border-color: var(--graphite);
 }
 
-.btn-dark:not(:disabled):not(.disabled):active,
-.btn-dark:not(:disabled):not(.disabled).active,
-.show > .btn-dark.dropdown-toggle {
+.btn-graphite:not(:disabled):not(.disabled):active,
+.btn-graphite:not(:disabled):not(.disabled).active,
+.show > .btn-graphite.dropdown-toggle {
   color: var(--white);
-  background-color: var(--dark);
-  border-color: var(--dark);
+  background-color: var(--graphite);
+  border-color: var(--graphite);
 }
 
-.btn-dark:not(:disabled):not(.disabled):active:focus,
-.btn-dark:not(:disabled):not(.disabled).active:focus,
-.show > .btn-dark.dropdown-toggle:focus {
+.btn-graphite:not(:disabled):not(.disabled):active:focus,
+.btn-graphite:not(:disabled):not(.disabled).active:focus,
+.show > .btn-graphite.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
 }
 
@@ -2473,7 +2473,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-light:hover {
-  color: var(--dark);
+  color: var(--graphite);
   background-color: var(--white);
   border-color: var(--white);
 }
@@ -2492,7 +2492,7 @@ fieldset:disabled a.btn {
 .btn-outline-light:not(:disabled):not(.disabled):active,
 .btn-outline-light:not(:disabled):not(.disabled).active,
 .show > .btn-outline-light.dropdown-toggle {
-  color: var(--dark);
+  color: var(--graphite);
   background-color: var(--white);
   border-color: var(--white);
 }
@@ -2504,16 +2504,16 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-dark {
-  color: var(--dark);
+  color: var(--graphite);
   background-color: transparent;
   background-image: none;
-  border-color: var(--dark);
+  border-color: var(--graphite);
 }
 
 .btn-outline-dark:hover {
   color: var(--white);
-  background-color: var(--dark);
-  border-color: var(--dark);
+  background-color: var(--graphite);
+  border-color: var(--graphite);
 }
 
 .btn-outline-dark:focus,
@@ -2523,7 +2523,7 @@ fieldset:disabled a.btn {
 
 .btn-outline-dark.disabled,
 .btn-outline-dark:disabled {
-  color: var(--dark);
+  color: var(--graphite);
   background-color: transparent;
 }
 
@@ -2531,8 +2531,8 @@ fieldset:disabled a.btn {
 .btn-outline-dark:not(:disabled):not(.disabled).active,
 .show > .btn-outline-dark.dropdown-toggle {
   color: var(--white);
-  background-color: var(--dark);
-  border-color: var(--dark);
+  background-color: var(--graphite);
+  border-color: var(--graphite);
 }
 
 .btn-outline-dark:not(:disabled):not(.disabled):active:focus,
@@ -2664,7 +2664,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 1rem;
-  color: var(--dark);
+  color: var(--graphite);
   text-align: left;
   list-style: none;
   background-color: var(--white);
@@ -2793,7 +2793,7 @@ input[type="button"].btn-block {
   padding: 0.25rem 1.5rem;
   clear: both;
   font-weight: 400;
-  color: var(--dark);
+  color: var(--graphite);
   text-align: inherit;
   white-space: nowrap;
   background-color: transparent;
@@ -2802,7 +2802,7 @@ input[type="button"].btn-block {
 
 .dropdown-item:hover,
 .dropdown-item:focus {
-  color: var(--dark);
+  color: var(--graphite);
   text-decoration: none;
   background-color: var(--white);
 }
@@ -2836,7 +2836,7 @@ input[type="button"].btn-block {
 .dropdown-item-text {
   display: block;
   padding: 0.25rem 1.5rem;
-  color: var(--dark);
+  color: var(--graphite);
 }
 
 .btn-group,
@@ -3185,7 +3185,7 @@ input[type="button"].btn-block {
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 1px var(--white), 0 0 0 0.2rem var(--dark);
+  box-shadow: 0 0 0 1px var(--white), 0 0 0 0.2rem var(--graphite);
 }
 
 .custom-control-input:active ~ .custom-control-label::before {
@@ -3295,7 +3295,7 @@ input[type="button"].btn-block {
   height: calc(2.25rem + 2px);
   padding: 0.375rem 1.75rem 0.375rem 0.75rem;
   line-height: 1.5;
-  color: var(--dark);
+  color: var(--graphite);
   vertical-align: middle;
   background: var(--white)
     url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E")
@@ -3392,9 +3392,9 @@ input[type="button"].btn-block {
   height: calc(2.25rem + 2px);
   padding: 0.375rem 0.75rem;
   line-height: 1.5;
-  color: var(--dark);
+  color: var(--graphite);
   background-color: var(--white);
-  border: 1px solid var(--dark);
+  border: 1px solid var(--graphite);
   border-radius: 0.25rem;
 }
 
@@ -3408,7 +3408,7 @@ input[type="button"].btn-block {
   height: 2.25rem;
   padding: 0.375rem 0.75rem;
   line-height: 1.5;
-  color: var(--dark);
+  color: var(--graphite);
   content: "Browse";
   background-color: var(--white);
   border-left: 1px solid var(--white);
@@ -3620,7 +3620,7 @@ input[type="button"].btn-block {
 
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
-  color: var(--dark);
+  color: var(--graphite);
   background-color: var(--white);
   border-color: var(--white);
 }
@@ -4627,7 +4627,7 @@ jumbotron-fluid {
 }
 
 .alert-primary .alert-link {
-  color: var(--dark);
+  color: var(--graphite);
 }
 
 .alert-secondary {
@@ -4641,7 +4641,7 @@ jumbotron-fluid {
 }
 
 .alert-secondary .alert-link {
-  color: var(--dark);
+  color: var(--graphite);
 }
 
 .alert-tertiary {
@@ -4655,7 +4655,7 @@ jumbotron-fluid {
 }
 
 .alert-tertiary .alert-link {
-  color: var(--dark);
+  color: var(--graphite);
 }
 
 .alert-light {
@@ -5744,18 +5744,18 @@ a.bg-light:hover,
 a.bg-light:focus,
 button.bg-light:hover,
 button.bg-light:focus {
-  background-color: var(--dark) !important;
+  background-color: var(--graphite) !important;
 }
 
-.bg-dark {
-  background-color: var(--dark) !important;
+.bg-graphite {
+  background-color: var(--graphite) !important;
 }
 
-a.bg-dark:hover,
-a.bg-dark:focus,
-button.bg-dark:hover,
-button.bg-dark:focus {
-  background-color: var(--dark) !important;
+a.bg-graphite:hover,
+a.bg-graphite:focus,
+button.bg-graphite:hover,
+button.bg-graphite:focus {
+  background-color: var(--graphite) !important;
 }
 
 .bg-white {
@@ -5823,7 +5823,7 @@ button.bg-dark:focus {
 }
 
 .border-dark {
-  border-color: var(--dark-color) !important;
+  border-color: var(--graphite-color) !important;
 }
 
 .border-whhite {
