--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -45,8 +45,8 @@
           >Store</a
         >
         <a class="nav-item nav-link" href="/case-studies/">Work</a>
-        <a class="nav-item nav-link" href="/collaborate/">Collaborate</a>
-        <a class="nav-item nav-link" href="/media/">Media</a>
+        <!-- <a class="nav-item nav-link" href="/collaborate/">Collaborate</a> -->
+        <!-- <a class="nav-item nav-link" href="/media/">Media</a> -->
         <!-- <a class="nav-item nav-link" href="/about/">Company</a> -->
         <!-- <li class="nav-item dropdown">
           <a
@@ -114,19 +114,4 @@
       </div>
     </div>
   </nav>
-</section>
-
-<section id="announcements" class="container pt-3">
-  <div class="alert alert-warning alert-dismissible fade show" role="alert">
-    <strong>Holy guacamole!</strong> You should text us! Text @diesmo5 to
-    81010!
-    <button
-      type="button"
-      class="close"
-      data-dismiss="alert"
-      aria-label="Close"
-    >
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
 </section>
