--- a/layouts/linktree/section.html
+++ b/layouts/linktree/section.html
@@ -5,7 +5,7 @@
 <section id="header" class="py-5" style="background-color: #202020;">
   <div class="container text-center">
     <img src="/img/logo/favicon.png" alt="" class="col-3" />
-    <h6 class="text-light">@diesmo5</h6>
+    <h6 class="text-light mt-3">@diesmo5</h6>
   </div>
   <div class="container text-center py-4">
     {{ range $.Site.Data.linktree}}
