--- a/layouts/index.html
+++ b/layouts/index.html
@@ -50,18 +50,28 @@
     <div class="card col-lg-3 col-md-3 col-12 border-0 py-4">
       <a href="{{.url}}" class="text-decoration-none text-dark">
         <img src="{{.img}}" class="card-img-top" alt="{{.alt}}" />
-        <h5 class="pt-3">{{.title}}</h5>
-        <text class="text-small">
+        <h4 class="pt-3">{{.title}}</h4>
+        <text class="h5 font-weight-light">
           {{.description}}
         </text>
       </a>
-      <a href="{{.url}}" class="text-small">{{.tagline}} ></a>
+      <div class="py-2"></div>
+      <a href="{{.url}}" class="">{{.tagline}} ></a>
     </div>
     {{end}}
   </div>
 </div>
 
-{{ partial "clients" . }}
+<div class="container py-5">
+  <div class="row">
+    <div class="col-lg-6 col-md-6 col-12">
+      <h2 class=""></h2>
+    </div>
+  </div>
+</div>
+
+
+<!-- {{ partial "clients" . }}
 
 <div class="container-fluid text-center pb-5">
   <div class="container pb-5">
@@ -72,6 +82,6 @@
       >Start a Project</a
     >
   </div>
-</div>
+</div> -->
 
 {{end}}
