--- a/layouts/404.html
+++ b/layouts/404.html
@@ -3,7 +3,9 @@
 <div class="container py-5 text-center">
   <div class="row py-5">
     <h1 class="text-center  py-5">
-      404: Page Not Found
+      Sorry. :(
+      <br />
+      This web page is currently under development. Check back soon...
     </h1>
     <div class="row">
       <div class="col-lg-4 col-md-4 col-12 py-2">
