--- a/layouts/media/list.html
+++ b/layouts/media/list.html
@@ -31,7 +31,7 @@
       <div class="col-lg-8 col-md-8 col-12 py-5">
         <h1 class="font-weight-light display-1">{{.mediaTitle}}</h1>
         <h1 class="font-weight-light py-4">{{.mediaDescription}}</h1>
-        <a href="{{.url}}" class="btn btn-lg btn-{{.mediaColor}} rounded-0 px-5 py-2"
+        <a href="/{{.navUrl}}" class="btn btn-lg btn-{{.mediaColor}} rounded-0 px-5 py-2"
           >{{.mediaAction}}</a
         >
       </div>
@@ -53,7 +53,7 @@
       <div class="col-lg-8 col-md-8 col-12 py-5">
         <h1 class="font-weight-light display-1">{{.mediaTitle}}</h1>
         <h1 class="font-weight-light py-4">{{.mediaDescription}}</h1>
-        <a href="{{.url}}" class="btn btn-lg btn-{{.mediaColor}} rounded-0 px-5 py-2"
+        <a href="/{{.navUrl}}" class="btn btn-lg btn-{{.mediaColor}} rounded-0 px-5 py-2"
           >{{.mediaAction}}</a
         >
       </div>
@@ -61,4 +61,6 @@
     <div class="row py-5"></div>
   </div>
 </section>
-{{ end }} {{ end }}
+{{ end }} 
+<!--  -->
+{{ end }}
