--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-light pt-3">
+<footer class="bg-grey-light pt-3">
   <div class="container">
     <div class="row pb-3">
       <div class="p-3 col-lg-3 col-md-4 col-12">
@@ -7,7 +7,7 @@
           <ul class="list-unstyled">
             {{ range $.Site.Data.nav.new}}
             <li class="list-unstyled">
-              <a href="/{{.navUrl}}" class="text-small text-dark">{{.navTitle}}</a>
+              <a href="/{{.navUrl}}" class="text-small text-graphite">{{.navTitle}}</a>
             </li>
             {{end}}
           </ul>
@@ -19,7 +19,7 @@
           <ul class="list-unstyled">
             {{range $.Site.Data.nav.store}}
             <li class="list-unstyled">
-              <a href="/{{.navUrl}}" class="text-small text-dark">{{.navTitle}}</a>
+              <a href="/{{.navUrl}}" class="text-small text-graphite">{{.navTitle}}</a>
             </li>
             {{end}}
             </li>
@@ -32,7 +32,7 @@
           <ul class="list-unstyled">
             {{range $.Site.Data.nav.education}}
             <li class="list-unstyled">
-              <a href="/{{.navUrl}}" class="text-small text-dark">{{.navTitle}}</a>
+              <a href="/{{.navUrl}}" class="text-small text-graphite">{{.navTitle}}</a>
             </li>
             {{end}}
           </ul>
@@ -44,7 +44,7 @@
           <ul class="list-unstyled">
             {{range $.Site.Data.nav.enterprise}}
             <li class="list-unstyled">
-              <a href="/{{.navUrl}}" class="text-small text-dark">{{.navTitle}}</a>
+              <a href="/{{.navUrl}}" class="text-small text-graphite">{{.navTitle}}</a>
             </li>
             {{end}}
           </ul>
@@ -56,7 +56,7 @@
           <ul class="list-unstyled">
             {{range $.Site.Data.nav.developer}}
             <li class="list-unstyled">
-              <a href="/{{.navUrl}}" class="text-small text-dark">{{.navTitle}}</a>
+              <a href="/{{.navUrl}}" class="text-small text-graphite">{{.navTitle}}</a>
             </li>
             {{end}}
           </ul>
@@ -68,7 +68,7 @@
           <ul class="list-unstyled">
             {{range $.Site.Data.nav.collaborate}}
             <li class="list-unstyled">
-              <a href="/{{.navUrl}}" class="text-small text-dark">{{.navTitle}}</a>
+              <a href="/{{.navUrl}}" class="text-small text-graphite">{{.navTitle}}</a>
             </li>
             {{end}}
           </ul>
@@ -80,7 +80,7 @@
           <ul class="list-unstyled">
             {{range $.Site.Data.nav.media}}
             <li class="list-unstyled">
-              <a href="/{{.navUrl}}" class="text-small text-dark">{{.navTitle}}</a>
+              <a href="/{{.navUrl}}" class="text-small text-graphite">{{.navTitle}}</a>
             </li>
             {{end}}
           </ul>
@@ -92,7 +92,7 @@
           <ul class="list-unstyled">
             {{range $.Site.Data.nav.locations}}
             <li class="list-unstyled">
-              <a href="/{{.navUrl}}" class="text-small text-dark">{{.navTitle}}</a>
+              <a href="/{{.navUrl}}" class="text-small text-graphite">{{.navTitle}}</a>
             </li>
             {{end}}
           </ul>
@@ -104,20 +104,21 @@
           <ul class="list-unstyled">
             {{range $.Site.Data.nav.company}}
             <li class="list-unstyled">
-              <a href="/{{.navUrl}}" class="text-small text-dark">{{.navTitle}}</a>
+              <a href="/{{.navUrl}}" class="text-small text-graphite">{{.navTitle}}</a>
             </li>
             {{end}}
           </ul>
         </div>
       </div>
     </div>
+    <hr>
     <div class="row justify-content-end">
       {{range $.Site.Data.nav.essential}}
-      <a href="/{{.navUrl}}" class="text-small text-dark px-1">{{.navTitle}}</a>
+      <a href="/{{.navUrl}}" class="text-small text-graphite px-1">{{.navTitle}}</a>
       {{end}}
     </div>
     <div class="row justify-content-end py-1">
-      <p href="" class="text-small text-dark px-1">Copyright &copy; 2016 -  <script type="text/javascript">document.write(new Date().getFullYear());</script>, diesmo5, Inc. - All Rights Reserved</p>
+      <p href="" class="text-small text-graphite px-1">Copyright &copy; 2016 -  <script type="text/javascript">document.write(new Date().getFullYear());</script>, diesmo5, Inc. - All Rights Reserved</p>
     </div>
   </div>
 </footer>
